# junction_quantum_hack_PortfolioMaxxer

./: .gitmodules  01_portfolio_optimization.ipynb  Beyond_Linear_Programming.ipynb  README.md  max_linsat_transpiler.py  requirements.txt  testing_dqi_portfolio.py  testing_qiskit_functions.ipynb
dqi/src/: README.md  pyproject.toml  setup.py
dqi/src/dqi/basic_gates/: arithmetic_gates.py  basic_gates.py
dqi/src/dqi/bitwise/: README.md  __init__.py  affine_spectrum_test.py  affine_subspace_test.py  algebraic_sets.py  benchmark.py  c_discrete_math.c  contains_affine_subspace_test.py  enumerate_admissible.py  find_max_overlap_affine_subspace_test.py  find_subsets.py  gerrymandering_test.py  hitting_subspace_test.py  knapsack_test_cases.py  linear_subspace_benchmark.py  linear_subspace_test.py  main.py  power_sum_test.py  subspace_evasive_test.py  subspace_limited_test.py
dqi/src/dqi/dialogs/: dialog_int.py  dialog_int_test.py  dialog_poly.py  dialog_poly_test.py
dqi/src/dqi/dqi_circuit/: dqi_for_opi.py
dqi/src/dqi/gcd/: binary_gcd.py  binary_gcd_test.py  divstep_gcd.py  divstep_gcd_test.py  poly_eea_zalka.py  poly_eea_zalka_bloqs.py  poly_eea_zalka_bloqs_test.py  poly_eea_zalka_test.py
dqi/src/dqi/gf_arithmetic/: gf_division_using_dialog.py  gf_division_using_dialog_test.py  gf_division_using_flt.py  gf_division_using_flt_test.py  gf_inverse.py  gf_multiplication.py  gf_multiplication_test.py
dqi/src/dqi/rs_codes/: opi_classical_hardness.py  opi_gate_cost_table.py  opi_resource_estimates.py  rs_code_egcd_bloqs.py  rs_code_egcd_bloqs_zalka_eea.py  (+2 more)
(+283 files in other folders)
